# doc_processors

./: .env  README.md  format.bat  main.py  model.py  pyproject.toml  schema.py  semantic.ipynb  semantic_r.ipynb  test.py
routers/: content_based_router.py  content_based_service.py  operations.py  processor_router.py  processor_service.py  semantic_router.py  semantic_service.py  test.py
static/: arvore_dependencia_1700246858_561751.html  arvore_dependencia_1700246859_3918953.html  arvore_dependencia_1700246861_263516.html  arvore_dependencia_1700246862_5089586.html  arvore_dependencia_1700246864_681034.html  arvore_dependencia_1700249095_896143.html  arvore_dependencia_1700249098_6967506.html  arvore_dependencia_1700249102_3870835.html  arvore_dependencia_1700249109_2635083.html  arvore_dependencia_1700249113_7779365.html  arvore_dependencia_1700249117_2944114.html  arvore_dependencia_1700249194_8650973.html  arvore_dependencia_1700249197_1777816.html  arvore_dependencia_1700249201_5037045.html  arvore_dependencia_1700249207_9704967.html  arvore_dependencia_1700249213_224326.html  arvore_dependencia_1700249217_6202037.html  arvore_dependencia_1700249347_1211212.html  arvore_dependencia_1700249350_5224614.html  arvore_dependencia_1700249354_2712069.html  arvore_dependencia_1700249362_3874893.html  arvore_dependencia_1700249371_130315.html  arvore_dependencia_1700249375_591978.html  arvore_dependencia_1700249449_0082932.html  arvore_dependencia_1700249451_3449798.html  arvore_dependencia_1700249454_7144487.html  arvore_dependencia_1700249461_1814556.html  (+11 more)
(+4 files in other folders)
