[tool.poetry]
name = "doc-processors"
version = "0.1.0"
description = ""
authors = ["Aline Rose <aline.rose@mail.uft.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pypdf2 = "^3.0.1"
spacy = "^3.6.1"
docarray = "^0.38.0"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
scikit-learn = "^1.3.2"
gensim = "^4.3.2"
sqlalchemy = "^2.0.23"
matplotlib = "^3.8.1"
wordcloud = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
